<resources>
    <string name="app_name">Spezia</string>
    <string name="onBoarding_title1">Identify Spice</string>
    <string name="onBoarding_general_title">OnBoarding Screen General Title</string>
    <string name="onBoarding_general_desc">OnBoarding Screen General Description</string>
    <string name="onBoarding_general_img">OnBoarding Screen Vector Image</string>
    <string name="onBoarding_general_logo">OnBoarding Screen App Logo</string>
    <string name="onBoarding_title2">Learn Many Spice Species</string>
    <string name="onBoarding_desc1">You can identify the spice you don’t know through your camera</string>
    <string name="onBoarding_desc2">Let’s learn about the many spice species that exist in this world</string>
    <string name="get_started">GET STARTED</string>
    <string name="next">NEXT</string>

    <string name="enter_name">Enter username</string>
    <string name="enter_email">Enter your email</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="enter_pass">Enter your password</string>
    <string name="password_invalid">Password must be at least 8 characters</string>
    <string name="title_main">Hi, friend!</string>
    <string name="txt_main">Please select one of the following buttons,\nthank you and welcome to Spezia.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="register_txt">Register!</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="regist_txt">Please fill the data with properly and correctly!</string>
    <string name="edge_decoration_img">Edge decoration image</string>
    <string name="spezia_logo_welcome">Spezia welcome screen logo image</string>
    <string name="back">Back</string>
    <string name="login_vector_illustration">Login vector illustration</string>

    <string name="api_message_registration_failed">Failed to Register an Account!</string>
    <string name="api_message_email_has_been_used">Email has been used. Try using another email you have!</string>
    <string name="api_message_error_on_server">An error occurred while connecting to the server. Please check your internet connection!</string>
    <string name="invalid_pw_empty">Password must be filled!</string>
    <string name="invalid_email_empty">Email must be filled!</string>
    <string name="invalid_username_empty">Username must be filled!</string>
    <string name="login_failed">Failed to login. Try again!</string>
    <string name="wrong_email_pw">Wrong email / password!</string>
    <string name="awesome">Awesome!</string>
    <string name="login_success">You have successfully logged in. Have a good time!</string>
    <string name="login_success2">Login success..</string>
    <string name="continueAlertDialog">Continue</string>

    <string name="greeting">Hi, %1$s.</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation">Are you sure to logout ? This action will clear your session!</string>
    <string name="account_created_successfully">Nice! Your account has been created successfully. Please login!</string>

    <string name="team_name">1. Tobi Fiambodo Syech Maulana\n2. Muhammad Fadhil Aulia\n3. Apriza Zicka Rizquina\n4. Anggasta Aji Azhari\n5. Mazaya Syarafina\n6. Ade Iqbal</string>
    <string name="link"><![CDATA[https://id.pngtree.com/freepng/small-autumn-forest-plant-small-scene_5765665.html\n\nhttps://id.pngtree.com/freepng/small-scene-shrubs-grasses-and-plants_7120250.html\n\nhttps://storyset.com/planthttps://storyset.com/plant\n\nhttps://storyset.com/illustration/software-engineer/amico\n\nhttps://storyset.com/illustration/mobile-development/cuate\n\nhttps://storyset.com/illustration/profile-pic/cuate#8DC73DFF&hide=&hide=complete\n\nhttps://www.freepik.com/free-vector/vector-illustration-variety-spices-herbs-wooden-background_1265737.htm#query=Spice%20Vectors&position=10&from_view=search\n\nhttps://www.freepik.com/free-vector/vector-illustration-variety-spices-herbs-wooden-bowls-black-background_1320609.htm#page=3&query=spice&position=45&from_view=keyword]]></string>
    <string name="about">About</string>
    <string name="spezia">Spezia!</string>
    <string name="desk_spezia">An image processing-based application that is useful for recognizing the existing spices and then providing a description of the spices. By scanning or taking photos of the spices, users can find out the type and description of the spices. Not only that, users are also given recommendations or suggestions on what food processing can be served using these ingredients and provide information on the use of these ingredients as herbal medicines.</string>
    <string name="dev_title">Developer of Application</string>
    <string name="resources">Resources</string>
    <string name="in_development">In Development…</string>
    <string name="head_text_main">Kind of Spices</string>
    <string name="subtext_main">You can scan spice photos by using this feature</string>
    <string name="anyone_text">Anyone want help, Friend?</string>
    <string name="anyone_2">We will help you to scan the spices you don\'t know yet</string>
    <string name="language">Language</string>

    <string name="spezia_header">SPEZIA</string>
    <string name="spezia_desc_header">An image processing based\nspices recognition app</string>
    <string name="edge_decoration_img_main_menu">Edge decoration image in main menu</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="scan">Scan</string>
    <string name="dictionary">Dictionary</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>
    <string name="scan_desc">Scan the spices you don’t know.</string>
    <string name="dictionary_desc">Increase your knowledge about various spices.</string>
    <string name="article_desc">Explore the latest articles about spices.</string>
    <string name="profile_desc">View your account profile and other settings.</string>
    <string name="menu_item_icon_1">Scan menu item icon</string>
    <string name="menu_item_icon_2">Dictionary menu item icon</string>
    <string name="menu_item_icon_3">Article menu item icon</string>
    <string name="menu_item_icon_4">Profile menu item icon</string>

    <string name="profile_vector_illustration">Profile vector illustration</string>
    <string name="contact_us_desc">If you have problems, other questions, or want to report bugs related to this Spezia app, please send an email to : C22-PS136@bangkit.academy</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="app_developer_title">App Developer</string>
    <string name="spezia_definition_title">Spezia Definition</string>
    <string name="about_spezia_title">About Spezia</string>
    <string name="app_version_title">App Version</string>
    <string name="app_version_desc">The latest version of this Spezia app is 1.0</string>

    <string name="item_row_spice_name">Spice Name</string>
    <string name="item_row_short_desc">Short description here…</string>
    <string name="item_row_pic_spices">Spice picture</string>
    <string name="item_row_scientific_name">Scientific name</string>
    <string name="item_row_benefits">Benefits</string>
    <string name="item_row_description">Description</string>
    <string name="item_row_details">Details</string>
    <string name="failed_load_data_dictionary">Failed to load data from server. Try again!</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="result">Result :</string>
    <string name="dots">. . . . . .</string>

    <string name="failed_get_permission">Failed to getting permission!</string>
    <string name="failed_to_scan">Failed to scan. Try again!</string>
    <string name="image_story_empty">Please input the image first!</string>
    <string name="view_details">View Details</string>
    <string name="shot">Shot</string>
    <string name="switch_camera">Switch camera</string>
    <string name="failed_take_photo">Failed to take pictures!</string>
    <string name="failed_show_camera">Failed to show camera!</string>
    <string name="confidence">Accuracy : %1$s.</string>
    <string name="spice_scan_details">Spice Scan Details</string>
    <string name="scan_now">Scan Now</string>
</resources>