<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome_screen.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/rsz_shapes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/edge_decoration_img" />

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/rsz_logo_login"
            android:layout_marginTop="-180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_1"
            android:contentDescription="@string/spezia_logo_welcome" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/title_main"
            android:textColor="@color/low_dark_green_top_main_menu"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_2" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/txt_main"
            android:textColor="@color/dark_green"
            app:layout_constraintEnd_toEndOf="@+id/img_2"
            app:layout_constraintStart_toStartOf="@id/img_2"
            app:layout_constraintTop_toBottomOf="@+id/text_1" />

        <com.spezia.spezia.custom_view.ButtonCV
            android:id="@+id/btn_1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_2" />

        <com.spezia.spezia.custom_view.ButtonCV
            android:id="@+id/btn_2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



